--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 *  {
     margin: 0;
     text-decoration: none;
-    list-style: none;
+    font-size: 3vh;
+
 }
 
 body {
@@ -19,6 +20,8 @@ nav {
 }
 
 .navLinks {
+    list-style: none;
+
     width: 100%;
     display: flex;
     justify-content: space-evenly
@@ -28,7 +31,7 @@ nav {
     color: white;
     text-decoration: none;
     letter-spacing: 2px;
-    font-size: 15px;
+
     margin-left: 15px;
 }
 
@@ -41,7 +44,7 @@ nav {
     display: none;
 }
 
-h1, h2, h3, p {
+h1, h2, h3, p, ul{
     padding: 5px;
     margin-left: 5%;
     margin-right: 2%;
